# playground

./: .gitignore
agent-demo/: main.py  pyproject.toml
backend/: .env  .env.example  pyproject.toml  start.sh
backend/admin/: about-edit.html  index.html  login.html  post-edit.html
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: posts.py  settings.py  tags.py  upload.py
backend/data/: blog.db
deploy/: deploy.sh  nginx.conf  supervisor.conf
website/: about.html  blog.html  index.html  post.html  tags.html
website/assets/css/: fonts.css
website/assets/js/: api.js
